single fetch for 2 charts enabled - good success

--- a/templates/dashboard_home.html
+++ b/templates/dashboard_home.html
@@ -30,16 +30,24 @@
     </nav>
 
     <div class="container-fluid mt-3">
-        <h1>Three equal width columns</h1>
+        <h4>Three equal width columns</h4>
         <p>Note: Try to add a new div with class="col" inside the row class - this will create four equal-width columns.
         </p>
+
         <div class="row">
-            <div class="col p-3 bg-light text-white">{% include 'chart1.html' %}</div>
-            <div class="col p-3 bg-light text-white">{% include 'chart2.html' %}</div>
+            <div class="col p-3 bg-light text-white">
+                <figure class="highcharts-figure">
+                    <div id="chart-div1"></div>
+                </figure>
+            </div>
+            <div class="col p-3 bg-light text-white">
+                <figure class="highcharts-figure">
+                    <div id="chart-div2"></div>
+                </figure>
+            </div>
             <div class="col p-3 bg-primary text-white">.col</div>
             <!-- <div class="col p-3 bg-primary text-white">.col</div> -->
         </div>
-
     </div>
 </div>
 
