--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,6 +13,9 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
 
+    <script src="static/js/chart1.js"></script>
+    <!-- <script src="static/js/chart2.js"></script> -->
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
