going to refresh sidebar as failed to do SPA

--- a/templates/dashboard_home.html
+++ b/templates/dashboard_home.html
@@ -29,10 +29,8 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-3">
+    <div id="dashboard_subpage">
         <h4>Three equal width columns</h4>
-        <p>Note: Try to add a new div with class="col" inside the row class - this will create four equal-width columns.
-        </p>
 
         <div class="row">
             <div class="col p-3 bg-light text-white">
@@ -40,14 +38,28 @@
                     <div id="chart-div1"></div>
                 </figure>
             </div>
+        </div>
+
+
+        <div class="row">
             <div class="col p-3 bg-light text-white">
                 <figure class="highcharts-figure">
                     <div id="chart-div2"></div>
                 </figure>
             </div>
-            <div class="col p-3 bg-primary text-white">.col</div>
-            <!-- <div class="col p-3 bg-primary text-white">.col</div> -->
         </div>
+
+
+        <div class="row">
+            <div class="col p-3 bg-primary text-white">.col</div>
+        </div>
+
+
+        <div id="dashboard_page_content">
+            <p>some dummy content here</p>
+        </div>
+
+
     </div>
 </div>
 
