--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,36 +5,23 @@
 
 	<ul class="list-unstyled components">
 
-
-
-		<!--
-		<li class="active">
-			<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
-				<i class="glyphicon glyphicon-home"></i> Home
-			</a>
-			<ul class="collapse list-unstyled" id="homeSubmenu">
-				<li><a href="#">P1</a></li>
-				<li><a href="#">P2</a></li>
-			</ul>
-		</li>
-		
 		<li>
-			<a href="#">
-				<i class="glyphicon glyphicon-briefcase"></i> About
+			<a href="/">
+				<i class="glyphicon glyphicon-home"></i> Q-Lines Dashboard
 			</a>
-
-			<a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
-				<i class="glyphicon glyphicon-duplicate"></i>
-				Pages
-			</a>
-			<ul class="collapse list-unstyled" id="pageSubmenu">
-				<li><a href="#">Page 1</a></li>
-				<li><a href="#">Page 2</a></li>
-				<li><a href="#">Page 3</a></li>
-			</ul>
-
 		</li>
-		-->
+
+		<li>
+			<a href="#" onclick="load_page1()">
+				<i class="glyphicon glyphicon-wrench"></i> Page 1
+			</a>
+		</li>
+
+		<li>
+			<a href="#" onclick="load_page2()">
+				<i class="glyphicon glyphicon-wrench"></i> Page 2 - charts
+			</a>
+		</li>
 
 
 		<li>
@@ -44,21 +31,12 @@
 		</li>
 
 		<li>
-			<a href="/contact">
-				<i class="glyphicon glyphicon-question-sign"></i> Contact Support
-			</a>
-		</li>
-		<li>
 			<a href="#">
 				<i class="glyphicon glyphicon-log-out"></i> Log out
 			</a>
 		</li>
 
-		<li>
-			<a href="/">
-				<i class="glyphicon glyphicon-home"></i> QLINES Home
-			</a>
-		</li>		
-
 	</ul>
 </nav>
+
+
