--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,76 +5,19 @@
     <title>QLines - dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
-
-    <script src="static/js/chart1.js"></script>
-    <!-- <script src="static/js/chart2.js"></script> -->
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="static/js/by_sidebar_update3.js"></script>
 
-    <!-- Our Custom CSS -->
+    <script src="static/js/chart1.js"></script>
+
     <link rel="stylesheet" href="static/sidebar_style_new.css">
-
-    <style>
-        /*
-        footer {
-            background-color: #555;
-            color: white;
-            padding: 15px;
-        }
-
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td,
-        th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-        */
-    </style>
-    <script>
-        /*
-        function loadDoc(val) {
-            var xhttp = new XMLHttpRequest();
-            var data = new FormData();
-            xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200) {
-                    myFunction(this);
-                }
-            };
-
-            data.append("search_keyword", document.querySelector('#search_keyword').value)
-            data.append("page", val)
-            xhttp.open("POST", "search_backend", true);
-
-            xhttp.send(data);
-        }
-
-        function myFunction(xml) {
-            var xmlDoc = xml.response;
-            document.getElementById("flaskres").innerHTML =
-                xmlDoc // "<h1>My First Heading</h1><p>My first paragraph.</p>";
-        }
-        */
-    </script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -96,9 +39,10 @@
         {% include 'dashboard_home.html' %}
     </div>
 
-    <footer class="container-fluid">
+    <!-- <footer class="container-fluid">
         <p>Footer Text</p>
-    </footer>
+    </footer> -->
+
 </body>
 
 </html>
