datatable worked for fake data, also cleaned up files

--- a/templates/dash_devices.html
+++ b/templates/dash_devices.html
@@ -2,7 +2,22 @@
 
 
 {% block page_content %}
-<p>This is the devices page content</p>
+<p>before table</p>
 
+<table id="data" class="table table-striped">
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>Client Name</th>
+            <th>Last Message</th>
+            <th>First Message</th>
+        </tr>
+    </thead>
+    <tbody>
+    </tbody>
+</table>
+
+
+<p>after table</p>
 
 {% endblock %}
