--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -5,7 +5,6 @@
     <title>QLines - dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -15,9 +14,19 @@
 
     <script src="static/js/by_sidebar_update3.js"></script>
 
-    <script src="static/js/chart1.js"></script>
 
     <link rel="stylesheet" href="static/sidebar_style_new.css">
+
+    <!--for DataTables.js -->
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
+
+    <script src="static/js/chart1.js"></script>
+    <script src="static/js/table1.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -26,7 +35,6 @@
             });
         });
     </script>
-
 
     <style>
         .logout-nav {
@@ -40,21 +48,15 @@
             background-color: #ff6347
         }
     </style>
-
-
 </head>
 
 <body>
-
     <div class="wrapper">
         {% include 'dash_sidebar.html' %}
-
         <div id="content" style="width:100%">
             <nav class="navbar navbar-default">
                 <div class="container-fluid">
-
                     <div class="navbar-header">
-
                         <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
                             <i class="glyphicon glyphicon-align-left"></i>
                             <span></span>
