--- a/templates/nav.html
+++ b/templates/nav.html
@@ -16,9 +16,9 @@
 					    -->
 
                         <li><a href="/">Home</a></li>
-                        <li><a href="products">How it works</a></li>
+                        <!-- <li><a href="products">How it works</a></li> -->
                         <li><a href="pricing">Pricing</a></li>
-						<li><a href="/">Sign Up</a></li> 
+						<li><a href="/signup">Sign Up</a></li> 
 			            <li><a href="dashboard">Dashboard</a></li>
                         <li><a href="contact">Contact</a></li>
 
