--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -48,6 +48,17 @@
             background-color: #ff6347
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EQHPXFJRV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0EQHPXFJRV');
+    </script>
+
 </head>
 
 <body>
