--- a/templates/header.html
+++ b/templates/header.html
@@ -44,3 +44,13 @@
 <script src="../static/js/respond.min.js"></script>
 <![endif]-->
 <link rel="icon" type="image/png" href="../static/images/favicon.png" sizes="16x16">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0EQHPXFJRV"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0EQHPXFJRV');
+</script>
