--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -49,15 +49,8 @@
         }
     </style>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EQHPXFJRV"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    {% include 'google_analytics_tag.html' %}
 
-        gtag('config', 'G-0EQHPXFJRV');
-    </script>
 
 </head>
 
