--- a/templates/dash_comingsoon.html
+++ b/templates/dash_comingsoon.html
@@ -4,14 +4,8 @@
 <head>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EQHPXFJRV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+  {% include 'google_analytics_tag.html' %}
 
-    gtag('config', 'G-0EQHPXFJRV');
-  </script>
   <style>
     body,
     html {
