--- a/templates/header.html
+++ b/templates/header.html
@@ -46,11 +46,4 @@
 <link rel="icon" type="image/png" href="../static/images/favicon.png" sizes="16x16">
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0EQHPXFJRV"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-0EQHPXFJRV');
-</script>
+{% include 'google_analytics_tag.html' %}
