--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,9 +3,9 @@
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
                 <h4>About Q-LINES</h4>
-                <p>With more than 15 years of experience in cloud computing, remote management and networking,
-                    we provide the reliable and high-available network services to smooth out the remote device
-                    managements.</p>
+		<p>Using a cloud platform to manage your remote devices thousands of miles away, with
+                    on-demand instant access. The platform also provides an easy monitoring of sensor data and agent
+		    resource utilisation.</p>
                 <p>
                 <ul class="colorlib-social-icons">
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
