--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -28,6 +28,9 @@
     <script src="static/js/chart1.js"></script>
     <script src="static/js/table1.js"></script>
 
+    <!--for timezone management purpose -->
+    <script src="static/js/moment.min.js"></script>
+
     <script type="text/javascript">
         $(document).ready(function () {
             $('#sidebarCollapse').on('click', function () {
