fixing the browser time issue - now easy to manage

--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -27,17 +27,7 @@
 
     <script src="static/js/chart1.js"></script>
     <script src="static/js/table1.js"></script>
-
-    <!--for timezone management purpose -->
-    <script src="static/js/moment.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#sidebarCollapse').on('click', function () {
-                $('#sidebar').toggleClass('active');
-            });
-        });
-    </script>
+    <script src="static/js/browser_tz_scan.js"></script>
 
     <style>
         .logout-nav {
