--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,8 @@
     <!-- plugins:css -->
     <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- End plugin css for this page -->
@@ -18,6 +20,8 @@
     <link rel="stylesheet" href="static/login_assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="static/login_assets/images/favicon.png" />
+    <script src="static/js/browser_tz_scan.js"></script>
+
 </head>
 
 <body>
