per device page is ok now

--- a/templates/dash_device_single.html
+++ b/templates/dash_device_single.html
@@ -1,7 +1,7 @@
 {% extends 'dash_base_template.html' %}
 
 {% block page_content %}
-<p>This is the main dashboard page</p>
+<p>This is the main dashboard page for device {{client_name}}</p>
 
 <div class="row">
     <div class="col p-3 bg-light text-white">
