--- a/templates/dash_sidebar.html
+++ b/templates/dash_sidebar.html
@@ -5,11 +5,11 @@
 
 	<ul class="list-unstyled components">
 
-		<li>
-			<a href="{{url_for("dashboard") }}">  
+		<!-- <li>
+			<a href="{{url_for("devices") }}">  
 				<i class="glyphicon glyphicon-home"></i> Dashboard
 			</a>
-		</li>
+		</li> -->
 
 		<li>
 			<a href="{{url_for("devices") }}"> 
@@ -30,11 +30,11 @@
 			</a>
 		</li>
 
-		<li>
+		<!-- <li>
 			<a href="{{url_for("logout") }}"> 
 				<i class="glyphicon glyphicon-log-out"></i> Log out
 			</a>
-		</li>
+		</li> -->
 
 	</ul>
 </nav>
