--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -12,10 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="static/js/by_sidebar_update3.js"></script>
+    <script src="/static/js/by_sidebar_update3.js"></script>
 
 
-    <link rel="stylesheet" href="static/sidebar_style_new.css">
+    <link rel="stylesheet" href="/static/sidebar_style_new.css">
 
     <!--for DataTables.js -->
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -25,9 +25,9 @@
         src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
 
-    <script src="static/js/chart1.js"></script>
-    <script src="static/js/table1.js"></script>
-    <script src="static/js/browser_tz_scan.js"></script>
+    <script src="/static/js/chart1.js"></script>
+    <script src="/static/js/table1.js"></script>
+    <script src="/static/js/browser_tz_scan.js"></script>
 
     <style>
         .logout-nav {
