--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+ 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
@@ -15,7 +17,7 @@
     <script src="/static/js/by_sidebar_update3.js"></script>
 
 
-    <link rel="stylesheet" href="/static/sidebar_style_new.css">
+    <link rel="stylesheet" href="/static/css/sidebar_style_new.css">
 
     <!--for DataTables.js -->
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
