after moving to my other github

--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
 
 
-    <script src="/static/js/table1.js"></script>
+    <script src="/static/js/device_overview_table.js"></script>
     <script src="/static/js/browser_tz_scan.js"></script>
 
     {% block header_content %} {% endblock %}
