--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="static/login_assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="static/login_assets/images/favicon.png" />
+    <link rel="shortcut icon" href="static/images/favicon.png" />
     <script src="static/js/browser_tz_scan.js"></script>
 
 </head>
