--- a/templates/dash_sidebar.html
+++ b/templates/dash_sidebar.html
@@ -30,6 +30,12 @@
 			</a>
 		</li>
 
+		<li>
+			<a href="https://blog.qlines.net"> 
+				<i class="glyphicon glyphicon-wrench"></i> Blog
+			</a>
+		</li>		
+
 		<!-- <li>
 			<a href="{{url_for("logout") }}"> 
 				<i class="glyphicon glyphicon-log-out"></i> Log out
