--- a/templates/dash_comingsoon.html
+++ b/templates/dash_comingsoon.html
@@ -58,7 +58,7 @@
   <div class="bgimg">
     <div class="middle">
       <h1>COMING SOON</h1>
-      <a href="/" style="color:white">Back to Q-Lines</a>
+      <a href="/" style="color:white">Back to QLines</a>
       <hr>
       <p>34 days left</p>
     </div>
