--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                             </span>
                             <div class="desc">
                                 <h3>Remote control through central web dashboard</h3>
-                                <p>If you travel to another continent or overseas, keep eyes on the statistics!</p>
+                                <p>Keep eyes on the statistics from anywhere!</p>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="desc">
                                 <h3>Cloud Integration</h3>
                                 <p>Manage and monitor your remote network centrally! Behind the NAT, Proxy, Firewal,
-                                    etc.? Our cloud access helps to reach ouf the devices!</p>
+                                    etc.? Our cloud access helps to reach out the devices!</p>
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             </span>
                             <div class="desc">
                                 <h3>User friendly dashboard</h3>
-                                <p>Easy to use dashboard with analytics and statistics from your remote agents.</p>
+                                <p>Easy to use dashboard with analytics and statistics from the remote devices.</p>
                             </div>
                         </div>
                     </div>
