--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2">
-                    <div id="colorlib-logo"><a href="/">Q-Lines</a></div>
+                    <div id="colorlib-logo"><a href="/">QLines</a></div>
                 </div>
                 <div class="col-md-10 text-right menu-1">
                     <ul>
