--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Q-Lines Admin</title>
+    <title>QLines Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
@@ -30,7 +30,7 @@
                             <!--<div class="brand-logo">
                                 <img src="static/login_assets/images/logo.svg">
                             </div>-->
-                            <h4>Q-Lines dashboard</h4>
+                            <h4>QLines dashboard</h4>
                             <h6 class="font-weight-light">{{message}}</h6>
                             <form class="pt-3" method="post">
 
