--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
-                <h4>About Q-LINES</h4>
+                <h4>About QLINES</h4>
 		<p>Using a cloud platform to manage your remote devices thousands of miles away, with
                     on-demand instant access. The platform also provides an easy monitoring of sensor data and agent
 		    resource utilisation.</p>
