--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Q-Lines Admin</title>
+    <title>QLines Admin</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="static/login_assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="static/login_assets/vendors/css/vendor.bundle.base.css">
@@ -32,7 +32,7 @@
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-left p-5">
 
-                            <h4>Q-Lines Dashboard</h4>
+                            <h4>QLines Dashboard</h4>
                             <h6 class="font-weight-light">{{login_message}}</h6>
                             <form method="post">
                                 <div class="form-group">
