update on 6.4.2023 before changing the dashboard view

--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -16,7 +16,6 @@
 
     <script src="/static/js/by_sidebar_update3.js"></script>
 
-
     <link rel="stylesheet" href="/static/css/sidebar_style_new.css">
 
     <!--for DataTables.js -->
@@ -62,7 +61,7 @@
                             <span></span>
                         </button>
                         <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
-                            Log out
+                            Log out {{current_username}}
                         </button>
                     </div>
                 </div>
