--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="static/login_assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="static/images/favicon.png" />
-    <script src="static/js/browser_tz_scan.js"></script>
+    <!--<script src="static/js/browser_tz_scan.js"></script>-->
 
 </head>
 
