fixed the device overview, but not ready for prod

--- a/templates/dash_devices.html
+++ b/templates/dash_devices.html
@@ -58,7 +58,7 @@
                     <div class="form-group row">
                         <div class="col-xs-2">
                             <label for="ex1">Enter client name:</label>
-                            <input name='device_name' class="form-control" id="ex1" type="text">
+                            <input name='client_name' class="form-control" id="ex1" type="text">
                         </div>
                     </div>
 
