--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -53,19 +53,25 @@
     <div class="wrapper">
         {% include 'dash_sidebar.html' %}
         <div id="content" style="width:100%">
-            <nav class="navbar navbar-default">
+            <!-- <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
                             <i class="glyphicon glyphicon-align-left"></i>
                             <span></span>
                         </button>
-                        <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
-                            Log out {{current_username}}
+
+                        <button type="button" class="btn btn-info">
+                            <i class="glyphicon glyphicon-align-right"></i>
+                            <span></span>
                         </button>
-                    </div>
+
+                        <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
+                            Log out
+                        </button> 
+                    </div> 
                 </div>
-            </nav>
+            </nav> -->
 
             {% block page_content %} {% endblock %}
 
