--- a/templates/dash_devices.html
+++ b/templates/dash_devices.html
@@ -1,9 +1,8 @@
 {% extends 'dash_base_template.html' %}
-
 {% block header_content %}
 <!-- <link rel="stylesheet" href="/static/css/add_device.css"> -->
 
-<link href="static/css/add_device.css" rel="stylesheet">
+<!-- <link href="static/css/add_device.css" rel="stylesheet">-->
 <script src="static/js/add_device.js"></script>
 
 <script>
