--- a/templates/dash_sidebar.html
+++ b/templates/dash_sidebar.html
@@ -3,7 +3,9 @@
 		<h3><a href="/dashboard">Dashboard</a></h3>
 	</div>
 
-	<ul class="list-unstyled components">
+	
+
+	<ul class="list-unstyled components h8 font-weight-normal">
 
 		<!-- <li>
 			<a href="{{url_for("devices") }}">  
@@ -13,7 +15,9 @@
 
 		<li>
 			<a href="{{url_for("devices") }}"> 
-				<i class="glyphicon glyphicon-wrench"></i> Devices
+				<i class="bi bi-1-circle"></i>
+				Devices
+				
 			</a>
 		</li>
 
