--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -30,6 +30,13 @@
     <script src="/static/js/device_overview_table.js"></script>
     <script src="/static/js/browser_tz_scan.js"></script>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+
+
     {% block header_content %} {% endblock %}
 
     <style>
@@ -52,8 +59,9 @@
 <body>
     <div class="wrapper">
         {% include 'dash_sidebar.html' %}
-        <div id="content" style="width:100%">
-            <!-- <nav class="navbar navbar-default">
+        <span class="glyphicon glyphicon-plus"></span>
+        <div id="content" style="width:100%" class="p-2">
+            <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
@@ -71,7 +79,7 @@
                         </button> 
                     </div> 
                 </div>
-            </nav> -->
+            </nav>
 
             {% block page_content %} {% endblock %}
 
