concluded that I need event-driven architecture

--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/static/js/by_sidebar_update3.js"></script>
+    <!-- <script src="/static/js/by_sidebar_update3.js"></script> -->
 
     <link rel="stylesheet" href="/static/css/sidebar_style_new.css">
 
@@ -31,11 +31,6 @@
     <script src="/static/js/browser_tz_scan.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
 
     {% block header_content %} {% endblock %}
 
