--- a/templates/dash_device_single_gpt.html
+++ b/templates/dash_device_single_gpt.html
@@ -6,7 +6,7 @@
 </script>
 
 <script src="/static/js/chart1.js"></script>
-<script src="/static/js/cli.js"></script>
+<!-- <script src="/static/js/cli.js"></script> -->
 
 {% endblock %}
 
