--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
- 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
@@ -26,8 +26,8 @@
         src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
 
-
     <script src="/static/js/device_overview_table.js"></script>
+
     <script src="/static/js/browser_tz_scan.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -71,8 +71,8 @@
 
                         <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
                             Log out
-                        </button> 
-                    </div> 
+                        </button>
+                    </div>
                 </div>
             </nav>
 
